--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+blinker==1.9.0
 blis==1.3.0
 catalogue==2.0.10
 certifi==2025.10.5
@@ -9,8 +10,11 @@ cloudpathlib==0.23.0
 colorama==0.4.6
 confection==0.1.5
 cymem==2.0.11
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+Flask==3.1.2
 greenlet==3.2.4
 idna==3.11
+itsdangerous==2.2.0
 Jinja2==3.1.6
 langcodes==3.5.0
 language_data==1.3.0
@@ -46,4 +50,5 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.1
+Werkzeug==3.1.3
 wrapt==2.0.0
